# document-ai-benchmark-framework

./: .env.example  README.md  Result.md  pyproject.toml  requirements.txt
benchmark/: log_azure.py
benchmark/logs/azure/20260329_125914/: _summary.json  invoice_easy_001.pdf.json  invoice_easy_002.pdf.json  invoice_easy_003.pdf.json  invoice_easy_004.pdf.json  invoice_easy_005.pdf.json
benchmark/outputs/: anthropic_20260327_003741.json  anthropic_20260327_004005.json  anthropic_20260327_004012.json  anthropic_multimodal_20260327_014511.json  azure_20260326_230519.json  azure_20260326_230711.json  azure_20260326_230823.json  azure_20260329_125322.json  azure_20260329_125914.json  openai_20260327_001342.json  openai_20260327_001723.json  openai_20260327_001748.json
data/: README.md  generate_dataset.py
data/ground_truth/: invoices.json  invoices.jsonl  invoices_easy.jsonl  invoices_hard.jsonl  invoices_medium.jsonl
docs/: architecture.md  benchmark_methodology.md  kpis.md
evaluation/: hitl.py  metrics.py  report.py  scoring.py
pipelines/: anthropic_multimodal_extraction.py  azure_document_intelligence.py  llm_extraction.py  normalize.py  run_benchmark.py
schemas/: invoice_schema.json
scripts/: generate_benchmark_charts.py
